# Grok-Workspace1

./: .gitignore  README.md  pyproject.toml
bridge/: active_channel.md  channel.jsonl  channel_meta.json
docs/: APPROVAL_AND_SQLITE.md  BRIDGE.md  DESIGN_PRINCIPLES.md  EDGES_AND_PROVENANCE.md  HANDOVER.md  LLM_VERIFICATION.md  QUICKSTART.md  Reflection_Engine_v0.md  V05_NOTES.md  V07_NOTES.md
scripts/: example_ingest.py  example_reflect.py
src/grmc/: __init__.py
src/grmc/bridge/: __init__.py  channel.py  fetch.py  memory_sync.py  protocol.py
src/grmc/cli/: bridge_cmd.py  edges_cmd.py  graph_cmd.py  main.py  ops_cmd.py
src/grmc/core/: __init__.py  approval_queue.py  embedder.py  eval_harness.py  export_dump.py  graph_query.py  memory_manager.py
src/grmc/llm/: __init__.py  audit.py  client.py  config.py  verification.py
src/grmc/models/: __init__.py  episode.py  graph_edge.py  graph_node.py  proposal.py  reflection_report.py
src/grmc/reflection/: __init__.py  reflection_engine.py
src/grmc/storage/: __init__.py  chroma_store.py  legacy_migrate.py  sqlite_store.py
tests/: test_bridge_channel.py  test_chroma_list_recent.py  test_edges_provenance.py  test_embedder.py  test_reflection_engine.py  test_sqlite_and_approval.py  test_v05_features.py  test_v06_llm_and_graph.py  test_v07_path_audit_export.py  test_v08_polish.py
tests/fixtures/: scenario_conservative.json
