[project]
name = "grmc"
version = "0.5.0"
description = "Grok Reflective Memory Core - Persistent & Reflective Memory System for Grok"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Grok + Quiet-Lab Collaboration"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
grmc = "grmc.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grmc = ["py.typed"]
